{
    "name": "ModioUIBrowserControls",
    "maps": [
        {
            "name": "Generic",
            "id": "2f352cbe-ce7e-4a01-be17-32205cfc01f9",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "5e25ee26-71b5-4496-8d79-5425a8d354bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Search",
                    "type": "Value",
                    "id": "5ed7bbea-6c38-49c8-9472-c9fbe15521c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Filter",
                    "type": "Button",
                    "id": "9f7a2e16-b1de-4538-a071-0f0d146e9c53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sort",
                    "type": "Button",
                    "id": "88ca5207-6106-4c9b-895d-9f44d4779d6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Report",
                    "type": "Button",
                    "id": "68d13cd6-6e08-4ed9-a5c8-5bb8c3380301",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Subscribe",
                    "type": "Button",
                    "id": "812a6193-d4b9-4415-940f-07691d900f6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TabLeft",
                    "type": "Button",
                    "id": "55622874-44d7-466d-8f3c-67adda0ced2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TabRight",
                    "type": "Button",
                    "id": "b9ce2aaa-6755-447d-b6d2-c40614cfc14a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuyTokens",
                    "type": "Button",
                    "id": "d7a3defe-00e0-433c-89ea-5159c86d1d0c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FilterLeft",
                    "type": "Button",
                    "id": "10b1c41d-b9d9-4882-b8c5-bd57fed8e3c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FilterRight",
                    "type": "Button",
                    "id": "5c488676-a66b-4df8-a5d7-59ac6a01c22d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DetectMouseInput",
                    "type": "Button",
                    "id": "ab67cf02-570a-41d3-b8c1-94122651057e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DetectMouseMovement",
                    "type": "Value",
                    "id": "461961ec-5afb-41da-9abe-ff52dc6e2a39",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FilterClear",
                    "type": "Button",
                    "id": "1bf2ac78-b8b4-4f49-8a37-3dc5c4cb9ac6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoreOptions",
                    "type": "Button",
                    "id": "03829c05-01dd-4f2f-a3b7-b6ed6e0b8b4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SearchPageLeft",
                    "type": "Button",
                    "id": "0150af94-635f-4c3b-8ae7-7f45032e1ce1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SearchPageRight",
                    "type": "Button",
                    "id": "cb2eecbf-df31-40a8-ac60-d040d1afe869",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollDescription",
                    "type": "Value",
                    "id": "9526f3e0-cd60-4b36-9894-decbb2e06861",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoreFromThisCreator",
                    "type": "Button",
                    "id": "d48c868a-0e5a-4158-a6f6-15e0d9d2d2e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeveloperMenu",
                    "type": "Button",
                    "id": "54864233-ee07-454a-860f-328b1fe75ecb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d739cefc-4e3d-4210-a091-4fad4a63b8e2",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Search",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2842eaa7-7376-443e-96a9-05b701e17e42",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Search",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f0cc88c-ace5-4744-a9a3-49ca039d9f45",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Filter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4190c335-4f4f-4334-b78d-1f04765241d5",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Filter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73c0182a-90bb-4abe-8be5-ce633d67edab",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1063b1b2-2d5c-46fa-9838-ee1ce7642166",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45b263c2-fda7-45dd-95fa-7f9616f7b818",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Subscribe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e52bc9b2-5e6d-4a87-8f53-6d7cba776a26",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c88a6b1-d0e2-434a-a509-80bffc791239",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b1d2f90-2ba4-48b6-97ab-4b599cbd5440",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "066e1830-c1b2-4cd6-8f0c-a0ab991ed5e3",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c20415a1-1815-4c8f-88d9-61f35091f606",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuyTokens",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63972b18-98c7-4db5-8b64-1242bfebf83c",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuyTokens",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46380ed8-9022-489e-9e54-f61a7a443984",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FilterLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7a6664d-d93e-4f0b-af58-7195ed60437e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FilterRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d239259-16c5-4a80-bbbf-d1d4061ab0b0",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Keyboard",
                    "action": "DetectMouseInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7c7cd3a-7dfe-47fd-81dd-af3716d85d3d",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Keyboard",
                    "action": "DetectMouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8711a7b-5740-42dd-814b-4f4dba1ebaf4",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse;Keyboard",
                    "action": "DetectMouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2a97eaf-2aec-4a20-bd6b-b7b0561a3122",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FilterClear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce5ca126-e954-4a1a-b691-0466af827c1e",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FilterClear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66bc04ba-2305-49d2-96ac-ea014e13eb3f",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoreOptions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9de4dd5-5c20-4a60-976b-e4e0276eb2f4",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoreOptions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "558a0a15-5a91-4668-80e5-69fb742314e5",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SearchPageLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8947e00-eaf9-4a46-80ff-fcf1ed81069b",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SearchPageRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f58d47b-d839-4d62-b857-be8ab21afa89",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "ScrollDescription",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c2e9274-17b7-4809-95ca-ffb5ed4d697c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoreFromThisCreator",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5421cd04-302c-4b62-b619-8511373a7358",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "DeveloperMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db75a144-ef19-422d-a745-bc61c8d1de61",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeveloperMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": []
        }
    ]
}